--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boyd Vocabulary</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; }
+        body { font-family: Arial, sans-serif; text-align: center; background-color: #f8f8f8; }
         .container { display: flex; justify-content: space-between; margin: 20px; }
-        .word-list { width: 40%; text-align: left; padding: 10px; }
-        .detail-container { width: 55%; text-align: center; padding: 10px; display: none; border-left: 2px solid #ccc; }
-        .letter-btn { margin: 5px; padding: 10px; cursor: pointer; }
-        .word-item { cursor: pointer; color: blue; text-decoration: underline; margin: 5px 0; }
-        .play-btn, .info-btn { margin: 10px; padding: 10px; cursor: pointer; display: block; width: 80%; margin: 10px auto; }
+        .word-list { width: 40%; text-align: left; padding: 10px; background: #ddd; border-radius: 5px; }
+        .detail-container { width: 55%; text-align: center; padding: 10px; display: none; border-left: 2px solid #ccc; background: #fff; border-radius: 5px; }
+        .letter-btn { margin: 5px; padding: 10px; cursor: pointer; background: #555; color: white; border: none; border-radius: 5px; }
+        .word-item { cursor: pointer; background: #777; color: white; padding: 10px; border-radius: 5px; margin: 5px 0; text-align: center; }
+        .play-btn, .info-btn { margin: 10px; padding: 10px; cursor: pointer; display: block; width: 80%; margin: 10px auto; background: #666; color: white; border: none; border-radius: 5px; }
         .button-group { display: flex; justify-content: center; gap: 10px; }
-        .small-btn { padding: 10px; width: 25%; }
+        .small-btn { padding: 10px; width: 25%; background: #444; color: white; border: none; border-radius: 5px; }
         #meaningText { margin-top: 20px; white-space: pre-line; }
     </style>
     <script>
