--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             margin: 4px; 
             border: none; 
             cursor: pointer;
-            background: #3498db; 
+            background: #909090; 
             color: white; 
             border-radius: 8px; 
             font-size: 16px;
             transition: background 0.3s, transform 0.2s;
         }
         .letter-btn:hover, .letter-btn.active { 
-            background: #2980b9; 
+            background: #555555; 
             transform: scale(1.1);
         }
         .content { 
@@ -58,11 +58,11 @@
             cursor: pointer; 
             padding: 5px; 
             border-bottom: 1px solid #ddd; 
-            color: #007bff; 
+            color: #909090; 
         }
         .word-item:hover, .word-item.active { 
             font-weight: bold; 
-            color: #0056b3; 
+            color: #555555; 
         }
         .details { 
             flex: 2; 
@@ -88,14 +88,14 @@
             padding: 12px 18px; 
             margin: 8px 0; 
             border: none;
-            background: #27ae60; 
+            background: #909090; 
             color: white; 
             border-radius: 6px; 
             font-size: 14px;
             transition: background 0.3s;
         }
         .button:hover, .audio-btn:hover {
-            background: #2ecc71;
+            background: #555555;
         }
         #pauseResumeBtn {
             background: #f39c12;
