--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
         h1 {
             text-align: center;
             color: #444;
-            position: absolute;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
+            position: relative;
+            margin-top: 40px;  /* Adjusted margin-top */
         }
         .letters {
             display: flex;
