--- a/index.html
+++ b/index.html
@@ -10,22 +10,30 @@
             background-color: #f9f9f9;
             color: #333;
             margin: 0;
-            padding: 20px;
-        }
-        .container {
-            display: flex;
-            max-width: 900px;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            padding: 0;
         }
         h1 {
             text-align: center;
             color: #444;
-            position: relative;
-            margin-top: 40px;  /* Adjusted margin-top */
+            margin: 0;
+            padding: 20px 0;
+            background-color: #ffffff;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 1;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            max-width: 900px;
+            margin: 100px auto 0;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
         .letters {
             display: flex;
@@ -117,8 +125,8 @@
     </style>
 </head>
 <body>
+    <h1>Boyd Vocabulary</h1>
     <div class="container">
-        <h1>Boyd Vocabulary</h1>
         <div class="letters">
             <script>
                 document.write("ABCDEFGHIJKLMNOPQRSTUVWXYZ".split("").map(l => `<button class='letter-btn' onclick='showWords("${l.toLowerCase()}", this)'>${l}</button>`).join(" "));
