--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
         </script>
     </div>
     <div class="container">
-        <div id="wordList" class="word-list"></div>
+        <div id="wordList" class="word-list">
+            <button class="button" onclick="backToAlphabet()">⬅ 返回字母列表</button>
+        </div>
         <div id="wordDetails" class="details">
             <button class="button" onclick="backToWords()">⬅ 返回</button>
             <h2 id="wordTitle"></h2>
