--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             text-align: center;
             margin: 15px 0;
         }
-        .letter-btn {
+        .letter-btn, .button {
             padding: 10px;
             margin: 5px;
             cursor: pointer;
@@ -31,7 +31,7 @@
             color: white;
             border-radius: 5px;
         }
-        .letter-btn:hover {
+        .letter-btn:hover, .button:hover {
             background: #777;
         }
         .container {
@@ -40,7 +40,7 @@
             gap: 20px;
             margin: 20px;
         }
-        .word-list {
+        .word-list, .details {
             width: 300px;
             max-height: 400px;
             overflow-y: auto;
@@ -62,22 +62,6 @@
             display: none;
             flex: 1;
             max-width: 400px;
-            background: white;
-            padding: 15px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .button {
-            display: inline-block;
-            padding: 10px 15px;
-            background-color: #444;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .button:hover {
-            background-color: #222;
         }
     </style>
 </head>
@@ -99,9 +83,13 @@
             <div id="phoneticContainer"></div>
             <div id="chineseContainer"></div>
             <div id="meaningContainer"></div>
+            <div id="audioControls">
+                <button class="button" onclick="rewindAudio()">⏪ -5s</button>
+                <button class="button" onclick="togglePlayPause()">▶️/⏸</button>
+                <button class="button" onclick="forwardAudio()">⏩ +5s</button>
+            </div>
         </div>
     </div>
-
     <script>
         let wordsData = {};
         let sentenceAudio = new Audio();
@@ -148,13 +136,6 @@
             });
         }
 
-        function backToAlphabet() {
-            document.getElementById('wordList').style.display = 'none';
-            document.getElementById('wordDetails').style.display = 'none';
-            document.querySelector('.alphabet-container').style.display = 'block';
-            document.querySelector('.category-container').style.display = 'block';
-        }
-
         function showDetails(word) {
             document.getElementById('wordList').style.display = 'none';
             document.getElementById('wordDetails').style.display = 'block';
@@ -162,6 +143,27 @@
             document.getElementById('phoneticContainer').innerHTML = `<button class='button' onclick='playAudio("${encodeURIComponent(word.Words)}.mp3")'>${word['pronunciation-1']}</button>`;
             document.getElementById('chineseContainer').innerHTML = `<button class='button'>${word['traditional Chinese']}</button>`;
             document.getElementById('meaningContainer').innerHTML = `<p>${word['English meaning']}</p>`;
+        }
+
+        function playAudio(audioSrc) {
+            sentenceAudio.src = audioSrc;
+            sentenceAudio.play();
+        }
+
+        function togglePlayPause() {
+            if (sentenceAudio.paused) {
+                sentenceAudio.play();
+            } else {
+                sentenceAudio.pause();
+            }
+        }
+
+        function rewindAudio() {
+            sentenceAudio.currentTime = Math.max(0, sentenceAudio.currentTime - 5);
+        }
+
+        function forwardAudio() {
+            sentenceAudio.currentTime = Math.min(sentenceAudio.duration, sentenceAudio.currentTime + 5);
         }
     </script>
 </body>
